fix caousel script

--- a/index.html
+++ b/index.html
@@ -190,9 +190,9 @@
 
 <!--js library-->
   <script src="js/jquiry.js"></script>
-  <script src="js/owl-carousel"></script>
   <script src="js/popper.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
+  <script src="js/owl.carousel.js"></script>
   <script src="js/main.js"></script>
 </body>
 </html>
