--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
     <!-- Bootstrap CSS -->
     <!--styling-->
     <link rel="stylesheet" href="css/bootstrap.min.css"/><!--styling bootstrap-->
-    <link rel="stylesheet" href="css/fontawesome.min.css"/><!--font awesome-->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous"><!--font qwesome 5-->
+    <link rel="stylesheet" href="css/font-awesome.min.css"/><!--font awesome-->
     <link rel="stylesheet" href="css/main.css"/>
     <link rel="stylesheet" href="css/style.css"/>
     <link rel="stylesheet" href="css/owl.carousel.min.css"/>
@@ -70,15 +69,42 @@
 <div class="clearfix"></div>
 <!----slider----->
 <div class="slider">
-    <img src="images/slider-light-slide-1-1920x776.jpg"/>
-    <h1>learn guitar easily</h1>
-    <button class="learn">start learning</button>
-    <ul id="mylist" class="list-unstyled">
-        <li><button class="btns" id="active">01</button></li>
-        <li><button class="btns" id="btn2">02</button></li>
-        <li><button class="btns" id="btn3">03</button></li>
-    </ul>
+  <div class="owl-carousel owl-theme">
+    <!-- Carousel Item -->
+    <div class="item item1"> 
+      <h1>learn guitar easily</h1>
+      <button class="learn">start learning</button>
+     <!--  <ul id="mylist" class="list-unstyled">
+          <li><button class="btns" id="active">01</button></li>
+          <li><button class="btns" id="btn2">02</button></li>
+          <li><button class="btns" id="btn3">03</button></li>
+      </ul> -->
+    </div>
+    <!-- Carousel Item -->
+    <div class="item item2"> 
+      <h1>learn guitar easily</h1>
+      <button class="learn">start learning</button>
+      <!-- <ul id="mylist" class="list-unstyled">
+          <li><button class="btns" id="active">01</button></li>
+          <li><button class="btns" id="btn2">02</button></li>
+          <li><button class="btns" id="btn3">03</button></li>
+      </ul> -->
+    </div>
+    <!-- Carousel Item -->
+    <div class="item item3"> 
+      <h1>learn guitar easily</h1>
+      <button class="learn">start learning</button>
+      <!-- <ul id="mylist" class="list-unstyled">
+          <li><button class="btns" id="active">01</button></li>
+          <li><button class="btns" id="btn2">02</button></li>
+          <li><button class="btns" id="btn3">03</button></li>
+      </ul> -->
+    </div>
+    
+  </div>
 </div>
+
+
 <!---end slider--->
 <!----start about--->
 <div class="about">
@@ -106,12 +132,12 @@
             <h1 wow-outer>Music Classes</h1>
             <div class="row">
                 <div class="col-md-4">
-                    <i class="fas fa-heart fa-4x"></i>
+                    <i class="fa fa-heart fa-4x"></i>
                     <h2>guitar for beginners</h2>
                     <p>Our teachers will gladly teach you the basics of the world’s most popular instrument.</p>
                 </div>
                 <div class="col-md-4">
-                    <i class="fab fa-digital-ocean fa-4x"></i>
+                    <i class="fa fa-digital-ocean fa-4x"></i>
                     <h2>Rhythm Guitar</h2>
                     <p>Ideal for guitarists that want to  establish a solid foundation for playing rhythm guitar.</p>
                 </div>
@@ -121,17 +147,17 @@
                     <p>The lessons in this section are perfect for guitarists that are interested in playing guitar solos.</p>
                 </div>
                 <div class="col-md-4">
-                    <i class="fab fa-soundcloud fa-4x"></i>
+                    <i class="fa fa-soundcloud fa-4x"></i>
                     <h2>Blues Guitar</h2>
                     <p>These classes will introduce you to the blues, an incredibly important style of music.</p>
                 </div>
                 <div class="col-md-4">
-                    <i class="fas fa-music fa-4x"></i>
+                    <i class="fa fa-music fa-4x"></i>
                     <h2>Guitar Theory</h2>
                     <p>If you're interested in learning about music theory for the guitar, these lessons are for you.</p>
                 </div>
                 <div class="col-md-4">
-                    <i class="fas fa-microphone fa-4x"></i>
+                    <i class="fa fa-microphone fa-4x"></i>
                     <h2>Live Guitar</h2>
                     <p>We also provide live guitar lessons to students of various skill levels and age.</p>
                 </div>
@@ -175,17 +201,17 @@
 </div>
 <!---end best-time------>
 <div class="TESTMONIALS">
-    <div class="container">
-        <div class="owl-carousel owl-theme">
-            <div> Your Content  jjik</div>
-            <div> Your Content </div>
-            <div> Your Content </div>
-            <div> Your Content </div>
-            <div> Your Content </div>
-            <div> Your Content </div>
-            </div>
-        </div>
-    </div>
+  <div class="container">
+    <div class="owl-carousel owl-theme">
+        <div> Your Content  jjik</div>
+        <div> Your Content </div>
+        <div> Your Content </div>
+        <div> Your Content </div>
+        <div> Your Content </div>
+        <div> Your Content </div>
+      </div>
+   </div>
+</div>
 
 
 <!--js library-->
