--- a/index.html
+++ b/index.html
@@ -360,6 +360,7 @@
     </div>
 </div>
   <!-------END EVENT--------------------------------->
+  <!---START MAP--------------->
 
 
 <!--js library-->
